[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/fonts/ui_font_med.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/bootup/SubSystem.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/bootup/SystemDialog.gd" type="Script" id=3]
[ext_resource path="res://ui/OverlayCRT.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=2]
resource_name = "boot_scroll"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColumnCenter/BootText:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "intro_glow"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColumnCenter/IntroText:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 2, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "intro_scroll"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColumnCenter/IntroText:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="SystemDialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 720, 576 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/boot_scroll = SubResource( 2 )
anims/intro_glow = SubResource( 3 )
anims/intro_scroll = SubResource( 4 )

[node name="Column1" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -326.0
margin_right = 256.0
margin_bottom = 326.0
grow_vertical = 2
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Video" parent="Column1" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 512.0
margin_bottom = 260.0
title = "Video Feed"

[node name="Comms" parent="Column1" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 292.0
margin_right = 512.0
margin_bottom = 552.0
title = "Comm Net"

[node name="ECommerce" parent="Column1" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 584.0
margin_right = 512.0
margin_bottom = 844.0
title = "E-Commerce"

[node name="Column2" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -326.0
margin_bottom = 326.0
grow_horizontal = 0
grow_vertical = 2
custom_constants/separation = 32

[node name="Legal" parent="Column2" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 0.0
margin_right = 512.0
margin_bottom = 260.0
title = "Legal Team"

[node name="Security" parent="Column2" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 292.0
margin_right = 512.0
margin_bottom = 552.0
title = "Security"

[node name="Safety" parent="Column2" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 584.0
margin_right = 512.0
margin_bottom = 844.0
title = "Safety"

[node name="ColumnCenter" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -225.5
margin_top = -84.0
margin_right = 225.5
margin_bottom = 84.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 64
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BootText" type="Label" parent="ColumnCenter"]
margin_right = 451.0
margin_bottom = 26.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Bootup Text"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroText" type="Label" parent="ColumnCenter"]
margin_top = 90.0
margin_right = 451.0
margin_bottom = 145.0
custom_colors/font_color = Color( 0, 1, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Cast In The Name Of Hype
Ye Not Salty"
align = 1
valign = 1
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OverlayCRT" parent="." instance=ExtResource( 4 )]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
